Deleted JwtFilterConfig & WebConfig files. Refactored cors to allow PATCH request